tests/negative/test_fnc_mac_same_name.orb
fnc foo (x:i32) () {};
mac foo (a b) {
    ret \();
};

fnc main () () {};